--- a/Practice Task.html
+++ b/Practice Task.html
@@ -75,6 +75,9 @@ Predecessor	Toyota Celica (A20/A30)
 </h2>
 </button>
 <br>
+<br>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat at reprehenderit nemo quas adipisci voluptate corporis culpa est dolores reiciendis fuga perferendis fugit, animi ipsa repellat illum assumenda provident eaque!
+</p>
 
 </body>
 </html>
